// Works with Gradle 5.7 and Java 12

// To run this do:
// ./gradlew run

// To build a distribution zip:
// ./gradlew distZip

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
    id 'org.beryx.jlink' version '2.22.3'

}


sourceCompatibility = 11
targetCompatibility = 11

version = '0.0.1'
group = 'ehu.isad'

java {
    modularity.inferModulePath.set(true)
}

application {
    mainModule = 'javafx' // name defined in module-info.java
    mainClass = 'ehu.isad.Main'
}



// ext.moduleName = 'gradlejavafxhelloworld'
mainClassName = "$moduleName/ehu.isad.WhatWebFX"


javafx {
    version = "12"
    modules = [ 'javafx.graphics', 'javafx.fxml', 'javafx.controls']
}


dependencies {

    //gson
    implementation 'com.google.code.gson:gson:2.8.6'

    implementation 'org.mongodb:mongo-java-driver:3.6+'


    // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.7'

    //awsome font
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    //sqlite
    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.28.0'

}

repositories {
    mavenCentral()
}

def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',
                '--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',]

run {
    inputs.property('moduleName', moduleName)
    doFirst {
        jvmArgs = jvmArgs.plus(newArgs)
        jvmArgs = jvmArgs.plus(['--module-path', classpath.asPath,
                                '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir).asPath,
                                '--module', "$mainClassName",
        ])
        classpath = files()
    }
}

jlink {
    addExtraDependencies("javafx")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'whatwebfx'

        jvmArgs = [
                "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons"
        ]
    }

    jpackage {
        jpackageHome = "C:/Program Files/Java/jdk-14.0.2"
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
        }
    }
}





